--- a/requirements.pip.dev.txt
+++ b/requirements.pip.dev.txt
@@ -1,10 +1,10 @@
 doit >= 0.33.1
-flake8 >= 3.9.2
-furo >= 2021.7.28b40
-hat-doit >= 0.6.3
-pdoc3 >= 0.9.2
-pytest >= 6.2.4
-pytest-cov >= 2.12.1
-setuptools >= 57.4.0
-sphinx >= 4.1.2
-wheel >= 0.36.2
+flake8 >= 4.0.1
+furo >= 2021.10.9
+hat-doit >= 0.6.4
+pdoc3 >= 0.10.0
+pytest >= 6.2.5
+pytest-cov >= 3.0.0
+setuptools >= 58.4.0
+sphinx >= 4.2.0
+wheel >= 0.37.0
