--- a/requirements.pip.dev.txt
+++ b/requirements.pip.dev.txt
@@ -1,7 +1,7 @@
 doit >= 0.33.1
 flake8 >= 4.0.1
 furo >= 2021.10.9
-hat-doit >= 0.7.4
+hat-doit ~= 0.7.4
 pdoc3 >= 0.10.0
 pytest >= 6.2.5
 pytest-cov >= 3.0.0
