--- a/requirements.pip.dev.txt
+++ b/requirements.pip.dev.txt
@@ -1,10 +1,12 @@
-doit >= 0.33.1
+build >= 0.7.0
+doit >= 0.34.2
 flake8 >= 4.0.1
-furo >= 2021.10.9
-hat-doit ~= 0.7.4
+furo >= 2022.3.4
+hat-doit ~= 0.8.1
 pdoc3 >= 0.10.0
-pytest >= 6.2.5
+pytest >= 7.1.1
 pytest-cov >= 3.0.0
-setuptools >= 58.4.0
-sphinx >= 4.2.0
-wheel >= 0.37.0
+pytest-timeout >= 2.1.0
+setuptools >= 60.10.0
+sphinx >= 4.4.0
+wheel >= 0.37.1
