--- a/requirements.pip.dev.txt
+++ b/requirements.pip.dev.txt
@@ -2,8 +2,8 @@ build >= 0.7.0
 doit >= 0.34.2
 flake8 >= 4.0.1
 furo >= 2022.3.4
-hat-doit ~= 0.8.1
-pdoc3 >= 0.10.0
+hat-doit ~= 0.8.2
+pdoc >= 10.0.4
 pytest >= 7.1.1
 pytest-cov >= 3.0.0
 pytest-timeout >= 2.1.0
