--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "private": true,
   "devDependencies": {
-    "docdash": "1.2.0",
-    "eslint": "7.21.0",
-    "jsdoc": "3.6.6"
+    "eslint": "^8.25.0",
+    "typedoc": "^0.23.15",
+    "typescript": "^4.8.4"
   }
 }
