--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
     "eslint": "^8.25.0",
+    "jest": "^29.2.0",
+    "jest-environment-jsdom": "^29.2.0",
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
     "typedoc": "^0.23.15",
     "typescript": "^4.8.4"
   }
