--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
         "declaration": true,
         "strict": true,
         "moduleResolution": "node",
-        "rootDir": "src_js"
+        "rootDir": "src_js",
+        "esModuleInterop": true
     },
     "include": ["src_js/**/*"]
 }
