--- a/package.json
+++ b/package.json
@@ -7,8 +7,15 @@
     "jest": "^29.2.0",
     "jest-environment-jsdom": "^29.2.0",
     "ts-jest": "^29.0.3",
-    "ts-node": "^10.9.1",
     "typedoc": "^0.23.15",
     "typescript": "^4.8.4"
+  },
+  "jest": {
+    "collectCoverageFrom": ["src_js/**/*.ts"],
+    "coverageReporters": ["text"],
+    "extensionsToTreatAsEsm": [".ts"],
+    "preset": "ts-jest",
+    "roots": ["test_jest"],
+    "testEnvironment": "jsdom"
   }
 }
