--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -19,10 +19,10 @@ jobs:
             uses: actions/setup-python@v1
             with:
                 python-version: "3.10"
-          - name: install requirements.pip.dev.txt
+          - name: install python requirements
             run: |
                 python -m pip install --upgrade pip
-                pip install -r requirements.pip.dev.txt
+                python -m pip install -e .
           - name: doit docs
             run: doit docs
           - name: create CNAME
