--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ Homepage = "http://hat-open.com"
 Repository = "https://github.com/hat-open/hat-util.git"
 Documentation = "http://hat-util.hat-open.com"
 
-[optional-dependencies]
+[project.optional-dependencies]
 dev = ["hat-doit ~=0.14.1"]
 
 [build-system]
