--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -22,7 +22,7 @@ jobs:
           - name: install python requirements
             run: |
                 python -m pip install --upgrade pip
-                python -m pip install -e .[dev]
+                python -m pip install -e '.[dev]'
           - name: doit docs
             run: doit docs
           - name: create CNAME
