--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -19,7 +19,7 @@ jobs:
           - name: install python requirements
             run: |
                 python -m pip install --upgrade pip
-                python -m pip install -e .[dev]
+                python -m pip install -e '.[dev]'
           - name: doit check
             run: doit check
           - name: doit test
