--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,10 @@ description = "Hat utility library"
 readme = "README.rst"
 requires-python = ">=3.10"
 license = {text = "Apache-2.0"}
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: Apache Software License"
+]
 
 [project.urls]
 Homepage = "http://hat-open.com"
@@ -12,10 +16,10 @@ Repository = "https://github.com/hat-open/hat-util.git"
 Documentation = "http://hat-util.hat-open.com"
 
 [project.optional-dependencies]
-dev = ["hat-doit ~=0.14.5"]
+dev = ["hat-doit ~=0.15.1"]
 
 [build-system]
-requires = ["hat-doit ~=0.14.5"]
+requires = ["hat-doit ~=0.15.1"]
 build-backend = "hat.doit.pep517"
 
 [tool.hat-doit]
