--- a/package.json
+++ b/package.json
@@ -1,21 +1,29 @@
 {
   "private": true,
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.40.0",
-    "@typescript-eslint/parser": "^5.40.0",
-    "eslint": "^8.25.0",
-    "jest": "^29.2.0",
-    "jest-environment-jsdom": "^29.2.0",
-    "ts-jest": "^29.0.3",
-    "typedoc": "^0.23.15",
-    "typescript": "^4.8.4"
+    "@typescript-eslint/eslint-plugin": "^7.1.1",
+    "@typescript-eslint/parser": "^7.1.1",
+    "eslint": "^8.57.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "ts-jest": "^29.1.2",
+    "typedoc": "^0.23.28",
+    "typescript": "^4.9.5"
   },
   "jest": {
-    "collectCoverageFrom": ["src_js/**/*.ts"],
-    "coverageReporters": ["text"],
-    "extensionsToTreatAsEsm": [".ts"],
-    "preset": "ts-jest",
-    "roots": ["test_jest"],
+    "collectCoverageFrom": [
+      "src_js/**/*.ts"
+    ],
+    "coverageReporters": [
+      "text"
+    ],
+    "preset": "ts-jest/presets/js-with-ts-esm",
+    "roots": [
+      "test_jest"
+    ],
+    "moduleNameMapper": {
+      "(.+)\\.js": "$1"
+    },
     "testEnvironment": "jsdom"
   }
 }
