--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "hat-util"
-version = "0.6.17"
+version = "0.6.18"
 description = "Hat utility library"
 readme = "README.rst"
 requires-python = ">=3.10"
@@ -28,6 +28,7 @@ build_wheel_task = "build_py"
 [tool.pytest.ini_options]
 testpaths = ["test_pytest"]
 asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function"
 timeout = 300
 
 [tool.coverage.report]
